[package]
name = "error_traits"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#[:: Main ::]
error-stack = { version = "0.4.1", features = ["anyhow"], optional = true }
anyhow = { version = "1.0.71", optional = true }
log = { version = "0.4.18", optional = true }

[features]
error_stack_dyn_ext = ["dep:error-stack", "dep:anyhow"]
log_err = ["dep:log"]


